Mejorados algunos controladores. Nuevos mensajes de ayuda si tienes maldiciones activas. Cambiadas algunas fixtures con mantenimientos de heroes y encantamientos. Nueva tabla en summary con todos los balances del juego. Mejorados muchos twigs. Aumentado el ratio de exploracion a /100.

--- a/src/Archmage/GameBundle/Resources/public/css/style.css
+++ b/src/Archmage/GameBundle/Resources/public/css/style.css
@@ -304,6 +304,12 @@ html {-webkit-text-size-adjust: none !important;}
     border-radius: 3px !important;
     background-color: inherit !important;
 }
+.bootstrap-select .dropdown-toggle {
+    border-radius: 3px !important;
+}
+.bootstrap-select.btn-group .dropdown-toggle .filter-option {
+    overflow: visible;
+}
 /* FONTAWESOME */
 .fa {
     margin-right: 2px !important;
