--- a/src/Archmage/GameBundle/Resources/views/Magic/artifact.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/artifact.html.twig
@@ -20,7 +20,7 @@
                             <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/building/guild.jpg') }}">
                         </div>
                         <div class="col-xs-8 text-padded">
-                            <div class="col-xs-12">Aquí puedes gastar 1 <span class="label label-extra">Turno</span> y activar un <span class="label label-extra">Artefacto</span> sobre tu reino o un reino enemigo. Al igual que con los hechizos, puede que no consigas traspasar su <span class="label label-extra">Defensa Mágica</span>, suma de sus <span class="label label-extra">Barreras</span> y sus hechizos defensivos.</div>
+                            <div class="col-xs-12">Aquí puedes gastar 1 <span class="label label-extra">Turnos</span> y activar un <span class="label label-extra">Artefacto</span> sobre tu reino o un reino enemigo. Al igual que con los hechizos, puede que no consigas traspasar su <span class="label label-extra">Defensa Mágica</span>, suma de sus <span class="label label-extra">Barreras</span> y sus hechizos defensivos.</div>
                         </div>
                     </div>
                 </div>
