--- a/src/Archmage/GameBundle/Resources/views/Territory/explore.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/explore.html.twig
@@ -28,7 +28,7 @@
                         <div class="panel-body text-responsive">
                             <div class="row">
                                 <div class="col-xs-12 text-center text-only">
-                                    TIERRAS<sub>exploradas</sub> = ({{ 3500|nf }} - TIERRAS<sub>jugador</sub> + 333) / 333
+                                    TIERRAS<sub>exploradas</sub> = ({{ 3500|nf }} - TIERRAS<sub>jugador</sub>) / 100
                                 </div>
                             </div>
                         </div>
