--- a/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
@@ -34,7 +34,7 @@
                                         <select class="form-control selectpicker show-tick dropup" id="target" name="target" data-live-search="true" data-size="5">
                                             <option>Objetivo</option>
                                             {% for target in targets %}
-                                                <option value="{{ target.id }}" data-content="<span class='label label-{{ target.faction.class }}'>{{ target.nick }}</span>">{{ target.nick }}</option>
+                                            <option value="{{ target.id }}" data-content="<span class='label label-{{ target.faction.class }}'>{{ target.nick }}</span>">{{ target.nick }}</option>
                                             {% endfor %}
                                         </select>
                                     </div>
@@ -46,7 +46,7 @@
                                         <select class="form-control selectpicker show-tick dropup" id="research" name="research" data-live-search="true" data-size="5">
                                             <option>Hechizo</option>
                                             {% for research in player.researchs if research.active and research.spell.skill.battle %}
-                                                <option value="{{ research.id }}" data-content="<span class='label label-{{ research.spell.faction.class }}'>{{ research.spell.name }}</span>">{{ research.spell.name }}</option>
+                                            <option value="{{ research.id }}" data-content="<span class='label label-{{ research.spell.faction.class }}'>{{ research.spell.name }}</span>">{{ research.spell.name }}</option>
                                             {% endfor %}
                                         </select>
                                     </div>
@@ -58,7 +58,7 @@
                                         <select class="form-control selectpicker show-tick dropup" id="item" name="item" data-live-search="true" data-size="5">
                                             <option>Artefacto</option>
                                             {% for item in player.items if item.quantity > 0 and item.artifact.skill.battle %}
-                                                <option value="{{ item.id }}" data-content="<span class='label label-{{ item.artifact.faction.class }}'>{{ item.artifact.name }}</span>">{{ item.artifact.name }}</option>
+                                            <option value="{{ item.id }}" data-content="<span class='label label-{{ item.artifact.faction.class }}'>{{ item.artifact.name }}</span>">{{ item.artifact.name }}</option>
                                             {% endfor %}
                                         </select>
                                     </div>
@@ -72,7 +72,7 @@
                 </div>
             </div>
             {% for troop in player.troops if troop.quantity > 0 %}
-            <div class="col-xs-12 col-md-6">
+            <div class="col-xs-12 col-md-6" style="z-index:1;">
                 <div class="panel panel-{{ troop.unit.faction.class }}">
                     <div class="panel-heading text-center"><i class="fa fa-fw fa-group"></i><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}" class="link">{{ troop.unit.name }}</a> [{{ troop.quantity|nf }}]</div>
                     <div class="panel-body text-responsive">
@@ -114,7 +114,7 @@
             {% for contract in player.contracts %}
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-{{ contract.hero.faction.class }}">
-                    <div class="panel-heading text-center"><i class="fa fa-fw fa-user"></i><a href="{{ path( 'archmage_game_home_help' ) }}#{{ contract.hero.name|slug }}" class="link">{{ contract.hero.name }}</a></div>
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-user"></i><a href="{{ path( 'archmage_game_home_help' ) }}#{{ contract.hero.name|slug }}" class="link">{{ contract.hero.name }}</a> <i class="fa fa-fw fa-star"></i>{{ contract.level }}</div>
                     <div class="panel-body text-responsive">
                         <div class="row">
                             <div class="col-xs-4">
@@ -122,16 +122,18 @@
                             </div>
                             <div class="col-xs-8 text-padded">
                                 {# row #}
-                                <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ contract.hero.goldMaintenance|nf }}</div>
-                                <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ contract.hero.peopleMaintenance|nf }}</div>
-                                <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ contract.hero.manaMaintenance|nf }}</div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ (contract.level * contract.hero.goldMaintenance)|nf }}</div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ (contract.level * contract.hero.peopleMaintenance)|nf }}</div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ (contract.level * contract.hero.manaMaintenance)|nf }}</div>
+                                {# row #}
+                                <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{% if contract.hero.skill %}{{ contract.hero.skill.description|raw }}{% else %}Ninguna{% endif %}</div>
                                 {# row #}
                                 <div class="col-xs-12 text-lore"><small><i>"{{ contract.hero.lore }}"</i></small></div>
                             </div>
                         </div>
                     </div>
                     <div class="panel-footer text-center text-responsive">
-                        <i class="fa fa-fw fa-joomla"></i>{% if contract.hero.skill %}{{ contract.hero.skill.description|raw }}{% else %}Ninguna{% endif %}
+                        <button type="button" class="btn btn-default" disabled><i class="fa fa-fw fa-flag"></i>A la batalla</button>
                     </div>
                 </div>
             </div>
