--- a/src/Archmage/GameBundle/Resources/views/Kingdom/temple.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/temple.html.twig
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-xs-12">
             <div class="page-header text-center">
-                <h1><i class="fa fa-fw fa-bell"></i>Templo</h1>
+                <h1><i class="fa fa-fw fa-balance-scale"></i>Templo</h1>
                 {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
             </div>
             <div class="row">
@@ -34,7 +34,7 @@
                         </div>
                         <div class="panel-footer text-center">
                             <form id="temple" name="temple" class="form-inline" data-toggle="validator" action="{{ path('archmage_game_kingdom_temple') }}" method="post" role="form">
-                                <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-bell"></i>Sacrificio</button>
+                                <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-balance-scale"></i>Sacrificio</button>
                                 <input type="hidden" name="_csrf_token" value="{{ csrf_token('temple') }}">
                             </form>
                         </div>
