--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -12,9 +12,9 @@
         </div>
         <div class="col-xs-12"><a name="objetivo"></a>
             <div class="panel panel-default">
-                <div class="panel-heading text-center">Objetivo</div>
+                <div class="panel-heading text-center">Introducción</div>
                 <div class="panel-body text-responsive text-only">
-                    <p>Información acerca del objetivo del juego.</p>
+                    <p>En ArchMage, asumirás el rol de un mago novicio intentando hacerse un hueco en un mundo plagado de enemigos. Competirás contra otros jugadores por la supremacía, investigando hechizos, reclutando tropas, contratando héroes y encontrando artefactos antigüos que usar en tu beneficio. El motor del juego son los <span class="label label-extra">Turnos</span>, que se otorgan a cada jugador en un ratio de 1 cada 5 minutos. Con ellos, el jugador tiene a su disposición un amplio abanico de posibilidades, como construir edificios que mejoren su estatus y su producción de recursos de <span class="label label-extra">Oro</span>, <span class="label label-extra">Personas</span> y <span class="label label-extra">Maná</span>, o mejorar su ratio de <span class="label label-extra">Defensa Mágica</span> y <span class="label label-extra">Defensa Física</span>, aumentando su protección contra hechizos y ataques enemigos, </p>
                 </div>
             </div>
         </div>
@@ -28,7 +28,7 @@
                             <img class="factions" src="{{ asset('bundles/archmagegame/images/factions.png') }}">
                             <div class="caption">
                                 <h2>Bonus de facción</h2>
-                                <p>Cada facción tiene una opuesta y aumentará su daño en combate un 25% contra ella. Así, si un <span class="label label-danger">Caos</span> atacase a un <span class="label label-primary">Sagrado</span> u <span class="label label-warning">Oscuridad</span>, su bonus sería del 0%; si atacase a un <span class="label label-success">Naturaleza</span> o <span class="label label-default">Neutral</span>, del +25%; y si atacase a un <span class="label label-info">Fantasmal</span>, -25%.</p>
+                                <p>Cada facción tiene una opuesta y aumentará su daño en combate un +10% contra ella. Así, si un <span class="label label-danger">Caos</span> atacase a un <span class="label label-primary">Sagrado</span> u <span class="label label-warning">Oscuridad</span>, su bonus sería del 0%; si atacase a un <span class="label label-success">Naturaleza</span> o <span class="label label-default">Neutral</span>, del +10%; y si atacase a un <span class="label label-info">Fantasmal</span>, -10%.</p>
                             </div>
                         </div>
                         {# row #}
@@ -36,7 +36,7 @@
                             <img class="factions" src="{{ asset('bundles/archmagegame/images/units.png') }}">
                             <div class="caption">
                                 <h2>Bonus de unidad</h2>
-                                <p>Cada unidad tiene un tipo opuesto y aumentará su daño en combate un 25% contra ella. Así, si una tropa <span class="label label-extra">Distancia</span> ataca a una <span class="label label-extra">Voladora</span>, tendrá un bonus del 25% adicional, pero si ataca a cualquier otra, no tendrá bonificación.</p>
+                                <p>Cada unidad tiene un tipo opuesto y aumentará su daño en combate un +10% contra ella. Así, si una tropa <span class="label label-extra">Distancia</span> ataca a una <span class="label label-extra">Voladora</span>, tendrá un bonus del +10% adicional, pero si ataca a cualquier otra, no tendrá bonificación.</p>
                             </div>
                         </div>
                     </div>
