--- a/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
@@ -80,10 +80,10 @@
                 </div>
             </div>
         </div>
-            {% elseif auction.research is not null and not player.hasResearch(auction.research) %}
+            {% elseif auction.research is not null and not player.hasResearch(auction.research) and auction.research.spell.faction != player.faction %}
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-{{ auction.research.spell.faction.class }}">
-                <div class="panel-heading text-center">{% if auction.research.spell.enchant %}<i class="fa fa-fw fa-link"></i>{% else %}<i class="fa fa-fw fa-magic"></i>{% endif %}<a href="{{ path( 'archmage_game_home_help' ) }}#{{ auction.research.spell.name|slug }}" class="link">{{ auction.research.spell.name }}</a></div>
+                <div class="panel-heading text-center">{% if auction.research.spell.enchantment %}<i class="fa fa-fw fa-link"></i>{% else %}<i class="fa fa-fw fa-magic"></i>{% endif %}<a href="{{ path( 'archmage_game_home_help' ) }}#{{ auction.research.spell.name|slug }}" class="link">{{ auction.research.spell.name }}</a></div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
@@ -182,7 +182,7 @@
             {% elseif auction.item is not null %}
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-{{ auction.item.artifact.faction.class }}">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-diamond"></i><a href="{{ path('archmage_game_home_help') }}#{{ auction.item.artifact.name|slug }}" class="link">{{ auction.item.artifact.name }}</a> [1]</div>
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-diamond"></i><a href="{{ path('archmage_game_home_help') }}#{{ auction.item.artifact.name|slug }}" class="link">{{ auction.item.artifact.name }}</a> [{{ auction.item.quantity|nf }}]</div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
