--- a/src/Archmage/GameBundle/Resources/public/css/style.css
+++ b/src/Archmage/GameBundle/Resources/public/css/style.css
@@ -22,7 +22,7 @@ img.background {
     box-shadow: 3px 3px 15px black;
 }
 .page-header {
-    margin-top: 0px;
+    margin-top: 0;
 }
 .page-header, .jumbotron > hr {
     border-color: white;
@@ -32,13 +32,13 @@ img.background {
 }
 .panel-body .text-padded {
     padding-top: 5px;
-    padding-left: 0px;
+    padding-left: 0;
 }
 .panel-body p {
     padding-top: 8px;
-    padding-left: 0px;
+    padding-left: 0;
     padding-right: 15px;
-    margin: 0px;
+    margin: 0;
 }
 .text-only {
     padding: 15px;
@@ -49,8 +49,8 @@ img.background {
     color: #cc7c26;
 }
 .panel > .btn-group > .btn {
-    border-top-right-radius: 0px !important;
-    border-top-left-radius: 0px !important;
+    border-top-right-radius: 0 !important;
+    border-top-left-radius: 0 !important;
 }
 @media screen and (max-width: 400px) {
     .text-responsive {
@@ -121,11 +121,11 @@ body {
     width: 100%;
     /* Set the fixed height of the footer here
     box-shadow: -10px -10px 20px #000;
-    margin-bottom: 0px;
+    margin-bottom: 0;
 }
 */
 .navbar-right {
-    margin-right: 0px;
+    margin-right: 0;
 }
 .navbar-collapse.collapsing {
     -webkit-transition: height 0.01s;
@@ -135,14 +135,14 @@ body {
     transition: height 0.01s;
 }
 .input-group-addon {
-    padding: 0px;
+    padding: 0;
 }
 .input-group-addon img {
     width: 38px;
     height: 38px;
 }
 .form-group {
-    margin-bottom: 0px;
+    margin-bottom: 0;
 }
 .custom-input {
     margin-top: 11px !important;
@@ -155,10 +155,10 @@ body {
     max-width: 280px;
     padding: 15px;
     margin: 0 auto;
-    margin-top: 0px;
+    margin-top: 0;
 }
 .form-signin .form-signin-heading, .form-signin {
-    margin-bottom: 0px;
+    margin-bottom: 0;
 }
 .form-signin .form-control {
     border-radius: 6px;
@@ -171,7 +171,7 @@ body {
     box-sizing: border-box;
 }
 .form-signin .bootstrap-select {
-    padding: 0px !important;
+    padding: 0 !important;
 }
 .form-signin .form-control:focus {
     z-index: 2;
@@ -226,7 +226,7 @@ body {
     height: 100px;
     margin: 0 auto;
     width: 100px;
-    margin-top: 0px;
+    margin-top: 0;
 }
 /* TR PRIMARY WHITE */
 .table > thead > tr > td.primary, .table > tbody > tr > td.primary, .table > tfoot > tr > td.primary, .table > thead > tr > th.primary, .table > tbody > tr > th.primary, .table > tfoot > tr > th.primary, .table > thead > tr.primary > td, .table > tbody > tr.primary > td, .table > tfoot > tr.primary > td, .table > thead > tr.primary > th, .table > tbody > tr.primary > th, .table > tfoot > tr.primary > thm .progress-bar-primary, .alert-primary {
@@ -289,6 +289,9 @@ table a:hover {
     border-bottom-right-radius: 3px !important;
 }
 /* INPUT SIZE EN CHROME DISTINTO DE FIREFOX, MUY PEQUEÑO, ARREGLADO CON */
+.form-inline .input-group > input.form-control {
+    border: 1px solid black !important;
+}
 @media (min-width: 768px) {
     .form-inline .input-group > .form-control {
         min-width: 220px !important;
@@ -317,21 +320,21 @@ html {-webkit-text-size-adjust: none !important;}
 .panel-middle {
     padding: 10px 15px;
     background-color: #3E444C;
-    -webkit-border-radius: 0px;
-    -moz-border-radius: 0px;
-    border-radius: 0px;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
     border-top: 1px solid rgba(0, 0, 0, 0.6);
     border-bottom: 1px solid rgba(0, 0, 0, 0.6);
 }
 /* RIBBONS */
 .alert-dismissible .close {
     position: relative;
-    top: 0px;
+    top: 0;
     color: inherit;
-    right: 0px;
+    right: 0;
 }
 .alert.ribbon {
-    margin-top: 0px;
+    margin-top: 0;
     margin-bottom: 15px;
     font-size: 14px;
     font-weight: 400;
