Ataque completamente funcional, falta testearlo. Nuevos calculos sobre convocar familias de monstruos, suma/cantidad/2. Telegram plenamente funcional, ahora manda stickers dependiendo del tipo de mensaje: acution, battle, magic, connection, espionage. Cambio de nombre de Mercado Negro a Subasta, mas corto y comprensible. Arreglados bugs de generateUrl en los commands de AuctionCommand, ver documentacion.

--- a/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
@@ -109,6 +109,12 @@
                     </div>
                 </div>
             </div>
+            {% else %}
+            <div class="container">
+                <div class="col-xs-12 alert alert-danger ribbon text-responsive text-center" role="alert">
+                    <i class="fa fa-fw fa-exclamation-triangle"></i> Actualmente no tienes tropas en tu ejército. Tal vez deberías <i class="fa fa-fw fa-user-plus"></i><a href="{{ path('archmage_game_army_recruit') }}">Reclutar</a> alguna.
+                </div>
+            </div>
             {% endfor %}
             {% for contract in player.contracts %}
             <div class="col-xs-12 col-md-6">
