--- a/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
@@ -33,7 +33,7 @@
                 </div>
                 <div class="btn-group btn-group-justified" role="group" aria-label="...">
                     <a href="{{ path('archmage_game_kingdom_tax') }}" class="btn btn-default"><i class="fa fa-fw fa-money"></i><span class="hidden-xs">Recaudar oro</span></a>
-                    <a href="{{ path('archmage_game_kingdom_auction') }}" class="btn btn-default"><i class="fa fa-fw fa-user-secret"></i><span class="hidden-xs">Mercado negro</span></a>
+                    <a href="{{ path('archmage_game_kingdom_auction') }}" class="btn btn-default"><i class="fa fa-fw fa-legal"></i><span class="hidden-xs">Mercado negro</span></a>
                 </div>
             </div>
         </div>
@@ -157,7 +157,7 @@
                     </div>
                 </div>
                 <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                    <a href="{{ path('archmage_game_kingdom_auction') }}" class="btn btn-default"><i class="fa fa-fw fa-user-secret"></i><span class="hidden-xs">Contratar héroes</span></a>
+                    <a href="{{ path('archmage_game_kingdom_auction') }}" class="btn btn-default"><i class="fa fa-fw fa-legal"></i><span class="hidden-xs">Contratar héroes</span></a>
                 </div>
             </div>
         </div>
