--- a/src/Archmage/GameBundle/Resources/public/css/style.css
+++ b/src/Archmage/GameBundle/Resources/public/css/style.css
@@ -92,8 +92,8 @@ h1 small, h2 small, h3 small, h4 small, h5 small, h6 small, .h1 small, .h2 small
 .label-extra {
     background-color: #3E444C;
 }
-.resources .label {
-
+p.resources {
+    margin-bottom: 2px;
 }
 .input-group-addon.label-full {
     width: 50% !important;
