--- a/src/Archmage/GameBundle/Resources/views/Account/profile.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/profile.html.twig
@@ -15,15 +15,18 @@
     <div class="jumbotron text-center">
         <div class="row">
             <div class="col-xs-12">
-                <div class="box-icon alert alert-{{ player.faction.class }}">
+                <div class="box-icon alert alert-{{ profile.faction.class }}">
                     <i class="fa fa-fw fa-4x fa-user"></i>
                 </div>
                 <div class="info">
-                    <h1 class="text-center">{{ player.nick }}{% if player == profile %}<br><small>(#{{ player.telegram }})</small>{% endif %}</h1>
-                    <h2><i class="fa fa-fw fa-rocket"></i>{{ player.power|nf }}</h2>
+                    <h1 class="text-center">{{ profile.nick }}</h1>
+                    {% if profile == player and not profile.chat %}
+                        {{ profile.telegram }}
+                    {% endif %}
+                    <h2><i class="fa fa-fw fa-rocket"></i>{{ profile.power|nf }}</h2>
                     <br>
-                    {% for achievement in player.achievements %}
-                    <div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-{% if loop.index is odd %}1{% else %}2{% endif %} alert alert-{{ player.faction.class }} ribbon text-center text-responsive">
+                    {% for achievement in profile.achievements %}
+                    <div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-{% if loop.index is odd %}1{% else %}2{% endif %} alert alert-{{ profile.faction.class }} ribbon text-center text-responsive">
                         <i class="fa fa-fw fa-lg fa-trophy"></i>{{ achievement.name }}
                         <small>({{ achievement.description }})</small>
                     </div>
