Ahora al ganar de forma aplastante robas edificios al enemigo. Arreglados bastantes bugs de jugabilidad.

--- a/src/Archmage/GameBundle/Resources/views/Territory/demolish.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/demolish.html.twig
@@ -67,7 +67,7 @@
                         </div>
                     </form>
                     {% else %}
-                        <a class="btn btn-default" href="{{ path( 'archmage_game_territory_explore' ) }}"><i class="fa fa-fw fa-search"></i>Explorar</a>
+                        <a class="btn btn-default" href="{{ path( 'archmage_game_territory_build' ) }}"><i class="fa fa-fw fa-wrench"></i>Construir</a>
                     {% endif %}
                 </div>
             </div>
